# grpc-bidi-stream-wrapper

./: CMakeLists.txt  README.md  conanfile.txt
example/: chat_client.cc  chat_server.cc
include/: grpc_bidi_wrapper.hpp
proto/: CMakeLists.txt  bidi_chat.proto
